Complete comment persist function!!

--- a/app/documents/1/2012年12月2日主日話語（繁體）.html
+++ b/app/documents/1/2012年12月2日主日話語（繁體）.html
@@ -27,6 +27,28 @@
 	</style>
 </head>
 <body lang="zh-TW" text="#000000" dir="LTR">
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		
+		<div id="mid" style="display:none">14</div>
+		
+		<div id="mid" style="display:none">14</div>
+		
+		<div id="mid" style="display:none">14</div>
+		
 		<div id="mid" style="display:none">12</div>
 		
 		<div id="mid" style="display:none">10</div>
@@ -59,11 +81,11 @@
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">哈利路亞！願各位有永恆聖父　神的愛以及聖子耶穌的平安。</font></font><u><font face="標楷體, cursive"><font size="4">也祝福各位今天聆聽主的話語時，能充滿<span data-range-id="1" class="markup">聖靈炙熱的感動、感化與動工。</span></font></font></u></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">哈利路亞！願各位有永恆聖父　神的愛以及聖子耶穌的平安。</font></font><u><font face="標楷體, cursive"><font size="4">也祝福各位今天聆聽主的話語時，能充滿<span id="jsPlumb_1_1" data-range-id="1" class="markup markup-selected markup-hover">聖靈炙熱的感動、感化與動工。</span></font></font></u></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">今天會<span data-range-id="2" class="markup">傳講關於「德性」的話語。</span></font></font></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">今天會<span id="jsPlumb_1_7" data-range-id="2" class="markup markup-selected">傳講關於「德性」的話語。</span></font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
@@ -86,7 +108,7 @@
 <font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">（</font></font></font><font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font face="標楷體, cursive"><font size="4">*
 </font></font></span></font><font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">我們來看畫面。）</font></font><font color="#ff0000"><font face="標楷體, cursive"><font size="4"><b>＜影片</b></font></font></font></font><font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font color="#ff0000"><font face="標楷體, cursive"><font size="4"><b>1</b></font></font></font></span></font><font face="Gulim, 굴림, sans-serif"><font color="#ff0000"><font face="標楷體, cursive"><font size="4"><b>＞</b></font></font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font face="標楷體, cursive"><font size="4">11</font></font></span></font><font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">月初的某天清晨，我在<span data-range-id="8" class="markup">準備主日話語的時候，看到房間裡有一包已經好</span>幾個月都沒拆來吃的花生。我在晨禱之前想要吃花生，就打開那包放了兩個月的花生，拿一顆出來吃。可是，我吃了一顆花生之<span data-range-id="10" class="markup">後，就產生了外殼和碎屑。老師看到這樣的情況，</span>就指責說：「我真的看不下去你那<span data-range-id="14" class="markup">德性耶！」光是吃一顆花生，也</span>會產生那德性。為了清掉那<span data-range-id="12" class="markup">些東西，反而花了我更多的時間。</span></font></font></font></p>
+<font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font face="標楷體, cursive"><font size="4">11</font></font></span></font><font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">月初的某天清晨，我在<span id="jsPlumb_1_1" data-range-id="8" class="markup markup-selected markup-hover">準備主日話語的時候，看到房間裡有一包已經好</span>幾個月都沒拆來吃的花生。我在晨禱之前想要吃花生，就打開那包放了兩個月的花生，拿一顆出來吃。可是，我吃了一顆花生之<span data-range-id="10" class="markup">後，就產生了外殼和碎屑。老師看到這樣的情況，</span>就指責說：「我真的看不下去你那<span data-range-id="14" class="markup">德性耶！」光是吃一顆花生，也</span>會產生那德性。為了清掉那<span data-range-id="12" class="markup">些東西，反而花了我更多的時間。</span></font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
@@ -439,6 +461,25 @@
 	<br><p></p>
 </div>
 
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 	
 	
