Fix jsPlumb bug in Chrome by add connection in real time on hover or click

--- a/app/documents/1/2012年12月2日主日話語（繁體）.html
+++ b/app/documents/1/2012年12月2日主日話語（繁體）.html
@@ -43,6 +43,7 @@
 		
 		
 		
+		
 		<div id="mid" style="display:none">14</div>
 		
 		<div id="mid" style="display:none">14</div>
@@ -81,19 +82,19 @@
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">哈利路亞！願各位有永恆聖父　神的愛以及聖子耶穌的平安。</font></font><u><font face="標楷體, cursive"><font size="4">也祝福各位今天聆聽主的話語時，能充滿<span id="jsPlumb_1_1" data-range-id="1" class="markup markup-selected markup-hover">聖靈炙熱的感動、感化與動工。</span></font></font></u></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">哈利路亞！願各位有永恆聖父　神的愛以及聖子耶穌的平安。</font></font><u><font face="標楷體, cursive"><font size="4">也祝福各位今天聆聽主的話語時，能充滿聖靈炙熱的感動、感化與動工。</font></font></u></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">今天會<span id="jsPlumb_1_7" data-range-id="2" class="markup markup-selected">傳講關於「德性」的話語。</span></font></font></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">今天會傳講關於「德性」的話語。</font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">某天清晨禱告時<span data-range-id="3" class="markup">，聖子主對我說：</span></font></font><font face="標楷體, cursive"><font size="4"><b><span data-range-id="3" class="markup">「人們</span>看不下去別人的德性，所以才會連原本可以成就的事都沒達成，反而失敗、無法得到果實。」</b></font></font><font face="標楷體, cursive"><font size="4">主如此說了之後，教導我關於「德性」的部分。</font></font></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">某天清晨禱告時，聖子主對我說：</font></font><font face="標楷體, cursive"><font size="4"><b>「人們看不下去別人的德性，所以才會連原本可以成就的事都沒達成，反而失敗、無法得到果實。」</b></font></font><font face="標楷體, cursive"><font size="4">主如此說了之後，教導我關於「德性」的部分。</font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">所謂「德性」，是將人的模樣、行動或處境貶低的一種說法。</font></font><font color="#008000"><u><font face="標楷體, cursive"><font size="4">「這副德性、那副德性令人看不下去<span data-range-id="5" class="markup">。連看都不想看到那副德性。」</span></font></font></u></font><font face="標楷體, cursive"><font size="4"><span data-range-id="5" class="markup">想必各位都常常聽</span>到這種說法，而且在生活中也都經歷過吧！</font></font></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">所謂「德性」，是將人的模樣、行動或處境貶低的一種說法。</font></font><font color="#008000"><u><font face="標楷體, cursive"><font size="4">「這副德性、那副德性令人看不下去。連看都不想看到那副德性。」</font></font></u></font><font face="標楷體, cursive"><font size="4">想必各位都常常聽到這種說法，而且在生活中也都經歷過吧！</font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <font color="#800000"><font face="標楷體, cursive"><font size="4"><b>老師的插畫</b></font></font><font face="標楷體, cursive"><font size="4"><span lang="en-US"><b>_0_1</b></span></font></font></font></p>
 <p style="text-indent: 0.71cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
@@ -108,7 +109,7 @@
 <font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">（</font></font></font><font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font face="標楷體, cursive"><font size="4">*
 </font></font></span></font><font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">我們來看畫面。）</font></font><font color="#ff0000"><font face="標楷體, cursive"><font size="4"><b>＜影片</b></font></font></font></font><font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font color="#ff0000"><font face="標楷體, cursive"><font size="4"><b>1</b></font></font></font></span></font><font face="Gulim, 굴림, sans-serif"><font color="#ff0000"><font face="標楷體, cursive"><font size="4"><b>＞</b></font></font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font face="標楷體, cursive"><font size="4">11</font></font></span></font><font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">月初的某天清晨，我在<span id="jsPlumb_1_1" data-range-id="8" class="markup markup-selected markup-hover">準備主日話語的時候，看到房間裡有一包已經好</span>幾個月都沒拆來吃的花生。我在晨禱之前想要吃花生，就打開那包放了兩個月的花生，拿一顆出來吃。可是，我吃了一顆花生之<span data-range-id="10" class="markup">後，就產生了外殼和碎屑。老師看到這樣的情況，</span>就指責說：「我真的看不下去你那<span data-range-id="14" class="markup">德性耶！」光是吃一顆花生，也</span>會產生那德性。為了清掉那<span data-range-id="12" class="markup">些東西，反而花了我更多的時間。</span></font></font></font></p>
+<font face="Gulim, 굴림, sans-serif"><span lang="en-US"><font face="標楷體, cursive"><font size="4">11</font></font></span></font><font face="Gulim, 굴림, sans-serif"><font face="標楷體, cursive"><font size="4">月初的某天清晨，我在準備主日話語的時候，看到房間裡有一包已經好幾個月都沒拆來吃的花生。我在晨禱之前想要吃花生，就打開那包放了兩個月的花生，拿一顆出來吃。可是，我吃了一顆花生之後，就產生了外殼和碎屑。老師看到這樣的情況，就指責說：「我真的看不下去你那德性耶！」光是吃一顆花生，也會產生那德性。為了清掉那些東西，反而花了我更多的時間。</font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
@@ -461,6 +462,7 @@
 	<br><p></p>
 </div>
 
+	
 	
 	
 	
