User list added

--- a/app/documents/1/2012年12月9日主日話語（繁體）.html
+++ b/app/documents/1/2012年12月9日主日話語（繁體）.html
@@ -37,6 +37,9 @@
 		
 		
 		
+		
+		
+		
 <div type="HEADER">
 	<p style="margin-bottom: 0.4cm" align="RIGHT"><font face="Times New Roman, serif"><font size="2"><span lang="en-US"><font face="標楷體, 宋体, cursive">2012</font></span></font></font><font size="2"><font face="標楷體, 宋体, cursive">年</font></font><font face="Times New Roman, serif"><font size="2"><span lang="en-US"><font face="標楷體, 宋体, cursive">12</font></span></font></font><font size="2"><font face="標楷體, 宋体, cursive">月</font></font><font face="Times New Roman, serif"><font size="2"><span lang="en-US"><font face="標楷體, 宋体, cursive">9</font></span></font></font><font size="2"><font face="標楷體, 宋体, cursive">日主日話語</font></font></p>
 </div>
@@ -50,15 +53,15 @@
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, 宋体, cursive"><font size="4">哈利路亞！願各位有永恆聖父　神的愛以及聖子耶穌的平安。</font></font><u><font face="標楷體, 宋体, cursive"><font size="4">也祝福各位今天聆聽主的話語時，能充滿聖靈炙熱的感動、感化與動工。</font></font></u></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, 宋体, cursive"><font size="4">哈利路亞！願各位有永恆聖父　神的愛<span class="markup markup-hover" data-range-id="6" id="jsPlumb_1_43">以及聖子耶穌的平安。</span></font></font><u><font face="標楷體, 宋体, cursive"><font size="4"><span class="markup markup-hover" data-range-id="6" id="jsPlumb_1_43">也祝福各位今天聆聽主的話語時，能充滿聖靈炙熱的感動、感化與動工。</span></font></font></u></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="標楷體, 宋体, cursive"><font size="4">我在清晨為了今天的話語而禱告時，體會到過去在主旨意中所經歷的一切，那體會就如黑暗中的光芒般清晰。</font></font></p>
+<font face="標楷體, 宋体, cursive"><font size="4">我在清晨為了今天的話語而禱告時，體會到過<span class="markup" data-range-id="4" id="jsPlumb_1_11">去在主旨意中所</span>經歷的一切，那體會就如黑暗中的光芒般清晰。</font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="Gulim, 굴림, sans-serif"><font face="標楷體, 宋体, cursive"><font size="4">那體會的內容是：</font></font><font face="標楷體, 宋体, cursive"><font size="4"><b>「即使是同樣的萬物或人，其命運也取決於『使用者的方法』這一個部分。」</b></font></font><font face="標楷體, 宋体, cursive"><font size="4">（再說一次：</font></font><font face="標楷體, 宋体, cursive"><font size="4"><b>「即使是同樣的萬物或人，其命運也取決於『使用者的方法』這一個部分。」</b></font></font><font face="標楷體, 宋体, cursive"><font size="4">）</font></font></font></p>
+<font face="Gulim, 굴림, sans-serif"><font face="標楷體, 宋体, cursive"><font size="4">那體會的內<span class="markup" data-range-id="5" id="jsPlumb_1_32">容是：</span></font></font><font face="標楷體, 宋体, cursive"><font size="4"><b><span class="markup" data-range-id="5" id="jsPlumb_1_32">「即使是同樣的萬物或人，其命運也取決於『使用者的方法』這一個部分。」</span></b></font></font><font face="標楷體, 宋体, cursive"><font size="4"><span class="markup" data-range-id="5" id="jsPlumb_1_32">（再說一次：</span></font></font><font face="標楷體, 宋体, cursive"><font size="4"><b><span class="markup" data-range-id="5" id="jsPlumb_1_32">「即使是同樣的萬物或人，其命運也取決於『使用者的方法』這一個部分。」</span></b></font></font><font face="標楷體, 宋体, cursive"><font size="4"><span class="markup" data-range-id="5" id="jsPlumb_1_32">）</span></font></font></font></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
@@ -77,7 +80,7 @@
 <p style="text-indent: 0.99cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 1.07cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
-<font face="標楷體, 宋体, cursive"><font size="4"><b>如果這棵松樹遇到樵夫，就會<span id="jsPlumb_1_11" data-range-id="3" class="markup markup-selected">被當成「柴」來使用。</span></b></font></font></p>
+<font face="標楷體, 宋体, cursive"><font size="4"><b>如果這棵松樹遇到樵夫，就會<span class="markup markup-selected markup-hover" data-range-id="7" id="jsPlumb_1_106">被當成「柴」來使用。</span></b></font></font></p>
 <p style="text-indent: 1.07cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
 <br></p>
 <p style="text-indent: 1.07cm; margin-bottom: 0cm; line-height: 0.88cm" align="JUSTIFY">
@@ -351,6 +354,9 @@
 	<br><p></p>
 </div>
 
+	
+	
+	
 	
 	
 	
